minor text adjustment

--- a/model.qmd
+++ b/model.qmd
@@ -18,9 +18,7 @@ We build a model to identify development agreements supporting developing countr
 
 ## Project dependencies
 
-The `renv` package is used for reproducibility by bringing project-local R dependency management to the project. Call `renv::restore()` to restore the projects dependencies (R version and package version).
-
-Then, lets load the packages.
+The `renv` package is used for reproducibility by bringing project-local R dependency management to the project. Call `renv::restore()` to restore the projects dependencies (R version and package version). Then we load the packages.
 
 ```{r}
 #| label: load-packages
